[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/fonts/Minecraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/fonts/minecraft_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/menus/pause_menu/pause_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.254902 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 43.0
margin_top = 26.0
margin_right = 257.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Game Paused"

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 300.0
margin_bottom = 160.0

[node name="ContinueButton" type="Button" parent="VBoxContainer/Buttons"]
margin_right = 300.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[node name="Label" type="Label" parent="VBoxContainer/Buttons/ContinueButton"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" type="Button" parent="VBoxContainer/Buttons"]
margin_top = 24.0
margin_right = 300.0
margin_bottom = 46.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
flat = true

[node name="Label" type="Label" parent="VBoxContainer/Buttons/ReturnButton"]
margin_right = 195.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Return to the main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="VBoxContainer/Buttons"]
margin_top = 50.0
margin_right = 300.0
margin_bottom = 72.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Buttons/ExitButton"]
margin_right = 68.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Buttons/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
